# kanaria

./: README.md
.github/workflows/: gradle.yml
kanaria_core/: Cargo.toml
kanaria_core/src/: constants.rs
kanaria_core/src/string/: ext.rs  params.rs  string.rs
kanaria_core/src/utils/: chars.rs  ext.rs  mod.rs  width.rs
kanaria_extern/: Cargo.toml
kanaria_jvm/: build.gradle.kts
kanaria_jvm/src/main/rust/: Cargo.toml
kanaria_jvm/src/main/rust/.cargo/: config
setup/: install_android_compiler_x86_64.sh  install_compiler_x86_64.sh
