[package]
name = "kanaria"
version = "0.2.1"
authors = ["osamu <46447427+sam-osamu@users.noreply.github.com>"]
edition = "2021"

repository = "https://github.com/samunohito/kanaria"
readme = "../README.md"
description = "This library provides functions such as hiragana, katakana, half-width and full-width mutual conversion and discrimination."
license = "MIT"

keywords = ["wide", "narrow", "hiragana", "katakana"]

exclude = [
    "tests/*"
]

[dependencies]
bitflags = "2.6.0"

[lib]
name = "kanaria"
path = "src/lib.rs"

